Add Ldap employee repository, add service layer

--- a/src/main/webapp/WEB-INF/layout/tiles.xml
+++ b/src/main/webapp/WEB-INF/layout/tiles.xml
@@ -4,6 +4,7 @@
 "http://tiles.apache.org/dtds/tiles-config_3_0.dtd">
 <tiles-definitions>
 	
+	
 	<definition name="base" template="/WEB-INF/layout/page.jsp">
 		<put-attribute name="header" value="/WEB-INF/layout/header.jsp" />
 		<put-attribute name="footer" value="/WEB-INF/layout/footer.jsp" />
@@ -34,11 +35,19 @@
 		<put-attribute name="body" value="/WEB-INF/views/project.jsp" />
 	</definition>	
 	
+	<definition name="newProject" extends="base">
+		<put-attribute name="body" value="/WEB-INF/views/newProject.jsp" />
+	</definition>	
+	
 	<definition name="employees" extends="base">
 		<put-attribute name="body" value="/WEB-INF/views/employees.jsp" />
 	</definition>	
 	
-	<definition name="employee" extends="base">
-		<put-attribute name="body" value="/WEB-INF/views/employee.jsp" />
+	<definition name="employeeStat" extends="base">
+		<put-attribute name="body" value="/WEB-INF/views/employeeStat.jsp" />
 	</definition>	
+	
+	<definition name="account" extends="base">
+		<put-attribute name="body" value="/WEB-INF/views/account.jsp" />
+	</definition>
 </tiles-definitions>
