--- a/src/main/webapp/WEB-INF/layout/tiles.xml
+++ b/src/main/webapp/WEB-INF/layout/tiles.xml
@@ -50,4 +50,8 @@
 	<definition name="account" extends="base">
 		<put-attribute name="body" value="/WEB-INF/views/account.jsp" />
 	</definition>
+
+	<definition name="help" extends="base">
+		<put-attribute name="body" value="/WEB-INF/views/help.jsp" />
+	</definition>	
 </tiles-definitions>
