--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -68,10 +68,19 @@ div.errors {background-color: #ffcccc;border: 2px solid red;}
 #saveCurrentTimesheet form input {font-family: sans-serif;font-size: 12pt;vertical-align: middle;}
 
 /* Контейнер входа на сайт */
-.login-container {margin-top: 100px;background-color: floralwhite;width: 40%;left: 30%;position: absolute;}
+.login-container {margin-top: 100px;background-color: floralwhite;width: 40%;left: 30%;position: absolute; max-width: 500px;}
 .login-card {width: 80%;margin: auto;}
 .login-form {padding: 10%;}
 #loginTemp {background: #D0D0D0;}
+#input-anchor {	padding: 6px 10px;}
+#rememberMe-label {	padding: 6px;margin-bottom: 0px;display:table-cell;text-align:right;}
+#rememberMe-checkbox {margin: 1px;}
+#rememberMe-span {padding: 6px 10px;color: #555;
+    text-align: center;
+    background-color: #eee;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    vertical-align: middle;display: inline-block;}
 
 /* Меню*/
 .menu {list-style-type: none;margin: 0;padding: 0;overflow: hidden;border: 1px solid #e7e7e7;background-color: #606060;width: 100%;z-index: 10000;}
