--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -99,7 +99,7 @@ div.errors {background-color: #ffcccc;border: 2px solid red;}
 #dropdown-content {display: none;position: absolute;background-color: #737373;min-width: 160px;box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);}
 #dropdown-content a {color: white;padding: 12px 16px;text-decoration: none;display: block;}
 #dropdown-content a:hover {background-color: #101010;}
-.dropdown:hover #dropdown-content {display: block;}
+.dropdown:hover #dropdown-content {display: block; z-index: 10000;}
 
 /* Диаграммы */
 .chartContainer {width: 99%;border: 0px solid gray;padding-top: 10px;}
