--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -62,7 +62,7 @@ div.errors {background-color: #ffcccc;border: 2px solid red;}
 
 /* Контейнер для экспорта xls */
 .inlineClass {display: inline;}
-#saveContainer {background-color: #A9A9A9;height: 45px;width: 380px;margin-bottom: 20px;}
+#saveContainer {background-color: #A9A9A9;height: 45px;width: 380px;margin-bottom: 10px;}
 #saveContainer form {height: 100%;vertical-align: middle;padding: 10px 10px;}
 #saveContainer form label {font-family: sans-serif;font-size: 12pt;vertical-align: middle;}
 #saveContainer form input {font-family: sans-serif;font-size: 12pt;vertical-align: middle;}
@@ -119,6 +119,17 @@ article {margin-left: 210px;border-left: 1px solid gray;padding: 1em;overflow: h
 .statPeriod {width: 100%;border: 0px;text-align: center;}
 .items {display: none;margin-top: 10px;border: solid 1px gray;}
 .colPercent{width: 5%;}
+
+/* Общая статистика */
+#filterInnerContainer #buttonRefresh {font-size: 12pt;}
+#paramsContainer {width: 100%; height: 45px;margin-bottom: 5px; margin-left: 1px; margin-right: 1px;}
+#filterContainer {background-color: #A9A9A9;height: 45px;width: 400px;float: left;}
+#filterContainer div, #saveStatistic form {height: 100%;vertical-align: middle;padding: 10px 10px;}
+#filterContainer div label {font-family: sans-serif;font-size: 12pt;vertical-align: middle;}
+#filterContainer div input, #saveStatistic form input {font-family: sans-serif;font-size: 12pt;vertical-align: middle;}
+#filterInnerContainer {margin: auto;height: 100%;vertical-align: middle;display: inline;}
+#saveStatistic {float: right; background-color: #A9A9A9;height: 45px;width: 200px;}
+.loadImage {margin: auto;}
 
 /* Страница помощь */
 .nav--section {margin-bottom: 20px;}
